# wxScid

./: .gitignore  Dockerfile  Makefile.am  README.md  autogen.sh  configure.ac
resources/: Makefile.am
resources/xrc/: menu.xrc
src/: App.cpp  App.h  ChessRules.cpp  ChessRules.h  MainFrame.cpp  MainFrame.h  Makefile.am  Scid.cpp  Scid.h  Squares.h  database.h  events.cpp  events.h
src/scid/: Makefile.am  dbasepool.cpp  position.cpp  scid.cpp  scid.h
src/widgets/: ChessBoard.cpp  ChessBoard.h  GameHtmlCtrl.cpp  GameHtmlCtrl.h  GameTxtCtrl.cpp  GameTxtCtrl.h  GamesListCtrl.cpp  GamesListCtrl.h  GamesListView.cpp  GamesListView.h
tests/: Makefile.am  scidbase.cpp
